--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         background-color: whitesmoke;
         border-radius: 0rem 0rem 0.5rem 0.5rem;
       }
+      main img{
+        max-width: 100%;
+        height: auto;
+      }
     </style>
 
 </head>
