Update profile pic on index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 text-center mb-3" style="overflow: hidden;">
-              <img id="myIcon" class="img-thumbnail" src="pages/img/index/Me_0320.png">
+              <img id="myIcon" style="max-width: 100%;" src="pages/img/index/Me_0500.png">
           </div>
           <div class="col-md-8">
             <h2 class="display-4">Hello, world!</h2>
