Simplified profile to post on GitHub Pages.

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,8 @@
   
 <head>
   <title>SMW Contact</title>
-  <link href="../styles/bootstrap.css" rel="stylesheet">
-  <link href="../styles/bootstrap-mod.css" rel="stylesheet">
-  <link href="../styles/site.css" rel="stylesheet">
+  <link href="styles/bootstrap.css" rel="stylesheet">
+  <link href="styles/bootstrap-mod.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
   <style>
@@ -27,7 +26,7 @@
 <body>
   <nav>
     <div class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand mr-auto" href="../index.html">Scott M. Wyant</a>
+      <a class="navbar-brand mr-auto" href="index.html">Scott M. Wyant</a>
       <div class="navbar-nav ml-auto">
       </div>
     </div>
@@ -51,20 +50,6 @@
       </div>
     </div>
   </main>
-
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <a href="https://github.com/scottmwyant" target="_blank">GitHub</a>
-          <a href="https://twitter.com/scottmwyant" target="_blank">Twitter</a>
-          <a href="#">Email</a>
-          <!--<a href="mailto:scottmwyant@gmail.com?Subject=scottmwyant.com" target="_top">Email</a>-->
-          <!--<a href="resume.pdf">Resume</a>-->
-        </div>
-      </div>
-    </div>
-  </footer>
 
 </body>
 </html>
