--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           
           <!-- First column, profile pic -->
           <div class="col-md-4 text-center mb-3" style="overflow: hidden;">
-              <img id="myIcon" style="max-width: 250px; display: block; margin: auto;" src="img/Me_400x500.png" class="mt-3 img-thumbnail">
+              <img id="myIcon" style="max-width: 95%; display: block; margin: auto;" src="img/Me_400x500.png" class="mt-3 img-thumbnail">
               
               <!-- Social icons -->
               <div class="my-3" style="text-align: center;">
