--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   
 <body>
 
-    <main class="jumbotron mt-4">
+    <main class="jumbotron jumbotron-lg">
       <div class="container">
         <div class="row">
           
           <!-- First column, profile pic -->
           <div class="col-md-4 text-center mb-3" style="overflow: hidden;">
-              <img id="myIcon" style="max-width: 95%; display: block; margin: auto;" src="img/Me_400x500.png" class="mt-3 img-thumbnail">
+              <img id="myIcon" style="max-width: 95%; display: block; margin: auto;" src="img/Me_400x500.png" class="img-thumbnail">
               
               <!-- Social icons -->
               <div class="my-3" style="text-align: center;">
