Update info and wording in bio

--- a/index.html
+++ b/index.html
@@ -61,17 +61,9 @@
             Cleveland, Ohio
           </div>
         </div>
-
-        <p class="lead my-4">Born and raised twenty five miles east of Cleveland, Ohio I've lived in the greater
-          Cleveland area my entire life. A graduate of Cleveland State University, my formal education is in Mechanical
-          Engineering.</p>
-        <p>I began my career in metalworking in 2010 and while still enjoy that sector today, I'm also drawn to software
-          development. I first became interested in coding while completing course work in C++ and MatLab. I've come a
-          long way since those days, all thanks to the vast community of developers who have taken time to share their
-          experiences to the benefit of others.</p>
-        <p>In the future I'd like find a way to contribute back to that community either through open-source, STEM
-          outreach, blog articles, or some other means. While I try and figure that out, feel free to say hi or send me
-          a link to your project.</p>
+        <p class="lead my-4">Born and raised twenty-five miles east of Cleveland, Ohio I've lived in the greater Cleveland area my entire life. A graduate of Cleveland State University, my formal education is in Mechanical Engineering.</p>
+        <p>I began my career in metalworking and remain in that sector today. I enjoy the manufacturing engineering role because it cuts across so many engineering disciplines.  It is my opinion that one of those disciplines is software engineering, a long-time personal interest.</p>
+        <p>My first exposure to software was an Intro to C++ course in college. I was fascinated but I couldn't really connect how the code I saw in class could be used in the real world. A decade later, I write code for industrial equipment, automate work in the engineering office, and build side projects, and I'm still fascinated by code.</p>
       </div>
 
     </div>
